Work for jarred plugins

--- a/plugins/org.eclipse.emf.teneo.sdk-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/build.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: build.properties,v 1.3 2007/08/28 02:17:45 nickb Exp $ build.properties,v 1.1 2005/11/25 20:30:36 cdamus Exp $
+# * $Id: build.properties,v 1.4 2009/05/06 17:59:12 mtaal Exp $ build.properties,v 1.1 2005/11/25 20:30:36 cdamus Exp $
 # */
 bin.includes = epl-v10.html,\
                eclipse_update_120.jpg,\
@@ -21,4 +21,4 @@ bin.includes = epl-v10.html,\
                feature.xml,\
                license.html
 root=rootfiles
-generate.feature@org.eclipse.emf.teneo.source=org.eclipse.emf.teneo
+generate.feature@org.eclipse.emf.teneo.source=org.eclipse.emf.teneo, exclude@org.eclipse.emf.teneo.ui.capabilities, exclude@org.eclipse.emf.teneo.doc
