--- a/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.all-feature/feature.properties
@@ -13,7 +13,7 @@
 featureName=Teneo All-In-One Feature (Hibernate and EclipseLink)
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse Modeling Framework Updates
