--- a/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
+++ b/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
@@ -33,7 +33,7 @@
 featureName=Teneo EMF Hibernate Documentation
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse Modeling Framework Updates
