--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.6 2009/02/23 09:11:23 mtaal Exp $
+#  * $Id: feature.properties,v 1.7 2009/05/06 18:04:11 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -38,7 +38,7 @@
 featureName=Teneo EMF Hibernate SDK
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse.org update site
