--- a/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.4 2009/02/28 20:17:43 mtaal Exp $
+#  * $Id: feature.properties,v 1.5 2009/05/06 18:04:13 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,7 +33,7 @@
 featureName=Teneo EMF EclipseLink Source
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse.org update site
