Updated provider name

--- a/plugins/org.eclipse.emf.teneo-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/feature.properties
@@ -11,7 +11,7 @@
 #  *   Martin Taal
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.6 2009/02/23 09:11:24 mtaal Exp $
+#  * $Id: feature.properties,v 1.7 2009/05/06 18:04:19 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -32,7 +32,7 @@
 featureName=Teneo EMF Hibernate Runtime
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse Modeling Framework Updates
