--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2007/09/03 12:51:44 mtaal Exp $
+#  * $Id: feature.properties,v 1.2 2009/05/06 18:04:19 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,7 +33,7 @@
 featureName=Teneo EMF Persistence Source
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Eclipse.org update site
