--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2009/05/06 16:01:42 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2009/05/06 18:40:56 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,22 @@ Plugin.providerName = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+teneo = Teneo
+teneo.hbm.label.0 = Generate EMF - Hibernate OR Mapping (joined-subclass)
+teneo.hbm.tooltip.0 = Select to generate a hibernate.hbm.xml file from the ecore model(s). Uses joined-subclass inheritance mapping strategy.
+teneo.hbm.label.1 = Generate EMF - Hibernate OR Mapping (super-class)
+teneo.hbm.tooltip.1 = Select to generate a hibernate.hbm.xml file from the ecore model(s). Uses superclass-table inheritance mapping strategy.
+teneo.openresource.label.0 = Open Resource
+teneo.openresource.tooltip.0 = Opens a resource using the specified editor
+teneo.import.label.0 = Import from XMI
+teneo.import.tooltip.0 = Imports an XMI file into a datastore
+teneo.export.label.0 = Export to XMI
+teneo.export.tooltip.0 = Exports a complete datastore to xmi
+teneo.import.label.1 = Import from XML
+teneo.import.tooltip.1 = Imports an XML file into a datastore
+teneo.export.label.1 = Export to XML
+teneo.export.tooltip.1 = Exports a complete datastore to xml
+teneo.cdo.label.0 = Generate CDO - Hibernate OR Mapping (joined-subclass)
+teneo.cdo.tooltip.0 = Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a CDO server. Uses joined-subclass inheritance mapping strategy.
+teneo.cdo.label.1 = Generate CDO - Hibernate OR Mapping (super-class)
+teneo.cdo.tooltip.1 = Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a cdo server. Uses superclass-table inheritance mapping strategy.
