--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.2 2009/05/06 16:02:02 mtaal Exp $
+# * $Id: plugin.properties,v 1.3 2009/05/06 20:20:25 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,7 @@ pluginProvider = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+
+teneo = Teneo
+teneo.generate.orm = Generate ORM File
+teneo.tooltip.orm = Select to generate an orm.xml file from the ecore model(s).
