--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.xml
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.xml
@@ -9,7 +9,7 @@
             nameFilter="*.ecore"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
-               label="Teneo"
+               label="%teneo"
                path="additions"
                id="org.eclipse.emf.teneo.eclipse.teneomenu">
             <separator
@@ -17,12 +17,12 @@
             </separator>
          </menu>
          <action
-               label="Generate ORM File"
+               label="%teneo.generate.orm"
                class="org.eclipse.emf.teneo.orm.eclipse.popup.actions.GenerateORMAction"
                menubarPath="org.eclipse.emf.teneo.eclipse.teneomenu/group5"
                enablesFor="+"
                id="org.eclipse.emf.teneo.orm.eclipse.generateorm">
-               tooltip="Select to generate an orm.xml file from the ecore model(s).">
+               tooltip="%teneo.tooltip.orm">
          </action>
       </objectContribution>
    </extension>
