Upped the version number to be in line with the build

--- a/plugins/org.eclipse.emf.teneo.ui.capabilities/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.ui.capabilities/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2009/05/06 15:51:02 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2009/05/07 06:45:48 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate
+Plugin.name = Teneo Capabilities
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
