Changed classpath to not build as an included jar

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -1,4 +1,3 @@
-source.org.eclipse.emf.teneo.hibernate.jar = src/
 bin.includes = plugin.xml,\
                plugin.properties,\
                META-INF/,\
@@ -8,13 +7,16 @@ bin.includes = plugin.xml,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               org.eclipse.emf.teneo.hibernate.extra.jar
+               about.html,\
+               org.eclipse.emf.teneo.hibernate.extra.jar,\
+               .
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 javacSource=1.5
 javacTarget=1.5
-jars.compile.order = org.eclipse.emf.teneo.hibernate.jar
+jars.compile.order = org.eclipse.emf.teneo.hibernate.jar,\
+                     .
 jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ant-1.6.5.jar,\
@@ -45,3 +47,5 @@ jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/log4j-1.2.11.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/mysql-connector-java-5.1.6-bin.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/xml-apis.jar
+source.. = src/
+output.. = bin/
