--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2009/05/06 18:04:19 mtaal Exp $
+#  * $Id: feature.properties,v 1.3 2009/05/07 10:39:35 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -144,5 +144,5 @@ regulations and policies concerning the import, possession, or use,\n\
 and re-export of encryption software, to see if this is permitted.\n
 ########### end of license property ##########################################
 
-# "updateSiteName" property - label for the EMFT update site
-updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
+# "updateSiteName" property - label for the EMF update site
+updateSiteName=Eclipse Modeling Framework (EMF) Updates
