--- a/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
+++ b/tests/org.eclipse.emf.teneo.tests-feature/feature.properties
@@ -144,5 +144,5 @@ regulations and policies concerning the import, possession, or use,\n\
 and re-export of encryption software, to see if this is permitted.\n
 ########### end of license property ##########################################
 
-# "updateSiteName" property - label for the EMFT update site
-updateSiteName=Eclipse Modeling Framework Technologies (EMFT) Updates
+# "updateSiteName" property - label for the EMF update site
+updateSiteName=Eclipse Modeling Framework(EMF) Updates
