Replace EMFT --> EMF

--- a/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/about.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/about.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: about.properties,v 1.1 2006/07/13 07:32:45 mtaal Exp $
+#  * $Id: about.properties,v 1.2 2009/05/07 10:39:46 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,15 +30,15 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-featureName=Eclipse Modeling Framework Technology (EMFT) Teneo Source
+featureName=Eclipse Modeling Framework (EMF) Teneo Source
 
-featureText=Eclipse Modeling Framework Technology (EMFT) Teneo Source\n\
+featureText=Eclipse Modeling Framework (EMF) Teneo Source\n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
 (c) Copyright Springsite BV (The Netherlands) and others. 2006.  All rights reserved.\n\
 \n\
-Visit http://www.eclipse.org/emft
+Visit http://www.eclipse.org/emf
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
