Included messages.properties in build file

--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.properties,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               plugin.xml
+               plugin.xml,\
+               src/org/eclipse/emf/teneo/hibernate/eclipse/messages.properties
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
