Included messages.properties in build file

--- a/plugins/org.eclipse.emf.teneo.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.properties,\
                about.properties,\
                .,\
                copyright.txt,\
-               about.html
+               about.html,\
+               src/org/eclipse/emf/teneo/eclipse/messages.properties
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
