--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2009/05/06 18:40:56 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2009/05/07 21:45:15 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -50,3 +50,4 @@ teneo.cdo.label.0 = Generate CDO - Hibernate OR Mapping (joined-subclass)
 teneo.cdo.tooltip.0 = Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a CDO server. Uses joined-subclass inheritance mapping strategy.
 teneo.cdo.label.1 = Generate CDO - Hibernate OR Mapping (super-class)
 teneo.cdo.tooltip.1 = Select to generate a hibernate.hbm.xml file from the ecore model(s) for use in a cdo server. Uses superclass-table inheritance mapping strategy.
+teneo.generate.orm = Generate ORM File
