Updated build.properties with newest files

--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
@@ -2,5 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                plugin.properties,\
                test.xml
