--- a/plugins/org.eclipse.emf.teneo.orm/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/build.properties
@@ -2,10 +2,16 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.1 2009/03/15 23:45:03 mtaal Exp $
+# $Id: build.properties,v 1.2 2009/05/08 03:40:49 mtaal Exp $
 
 bin.includes = .,\
                model/,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
