Updated build.properties with newest files

--- a/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.elistfactory/build.properties
@@ -1,10 +1,12 @@
-bin.includes = .classpath,\
-               .project,\
-               bin/,\
+bin.includes = epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                build.properties,\
                plugin.properties,\
                META-INF/,\
-               src/,\
                .
 source.. = src/
 output.. = bin/
