--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
@@ -2,9 +2,15 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.1 2008/04/15 21:09:34 seberle Exp $
+# $Id: build.properties,v 1.2 2009/05/08 03:40:52 mtaal Exp $
 
 bin.includes = .,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                model/,\
                META-INF/,\
                plugin.xml,\
