Updated build.properties with newest files

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.edit/build.properties
@@ -2,10 +2,16 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2009/01/21 21:34:02 seberle Exp $
+# $Id: build.properties,v 1.3 2009/05/08 03:40:54 mtaal Exp $
 
 bin.includes = .,\
                icons/,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
