Updated build.properties with newest files

--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/build.properties
@@ -1,5 +1,12 @@
 source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               plugin.properties,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                META-INF/,\
                .
