--- a/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
@@ -1,6 +1,13 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                .,\
                plugin.xml,\
                plugin.properties
+               
