--- a/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
@@ -1,10 +1,11 @@
-bin.includes = .classpath,\
-               .project,\
-               bin/,\
-               build.properties,\
-               META-INF/,\
-               src/,\
+bin.includes = META-INF/,\
                .,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                plugin.properties
 source.. = src/
 output.. = bin/
