Updated build.properties with newest files

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library.editor/build.properties
@@ -2,10 +2,16 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.1 2008/04/15 21:14:36 seberle Exp $
+# $Id: build.properties,v 1.2 2009/05/08 03:41:09 mtaal Exp $
 
 bin.includes = .,\
                icons/,\
+               epl-v10.html,\
+               modeling32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
