solved error in xml

--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.xml
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.xml
@@ -21,7 +21,7 @@
                class="org.eclipse.emf.teneo.orm.eclipse.popup.actions.GenerateORMAction"
                menubarPath="org.eclipse.emf.teneo.eclipse.teneomenu/group5"
                enablesFor="+"
-               id="org.eclipse.emf.teneo.orm.eclipse.generateorm">
+               id="org.eclipse.emf.teneo.orm.eclipse.generateorm" 
                tooltip="%teneo.tooltip.orm">
          </action>
       </objectContribution>
