--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.3 2009/05/06 20:20:25 mtaal Exp $
+# * $Id: plugin.properties,v 1.4 2009/05/08 07:53:42 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -33,5 +33,5 @@ pluginProvider = Eclipse Modeling Project
 # ==============================================================================
 
 teneo = Teneo
-teneo.generate.orm = Generate ORM File
+teneo.orm.file = Generate ORM File
 teneo.tooltip.orm = Select to generate an orm.xml file from the ecore model(s).
