--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006, 2007, 2008 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007, 2008, 2009 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.4 2009/05/08 07:53:42 mtaal Exp $
+# * $Id: plugin.properties,v 1.5 2009/05/08 09:05:11 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,7 +31,6 @@ pluginProvider = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
-
 teneo = Teneo
 teneo.orm.file = Generate ORM File
 teneo.tooltip.orm = Select to generate an orm.xml file from the ecore model(s).
