--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplatePlugin/plugin.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: plugin.properties,v 1.3 2008/05/22 18:18:09 mtaal Exp $
+#  * $Id: plugin.properties,v 1.4 2009/05/13 09:04:50 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 pluginName=Teneo Source
-providerName=Eclipse.org
+providerName=Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
