--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.8 2009/05/07 10:39:46 mtaal Exp $
+#  * $Id: feature.properties,v 1.9 2009/05/13 09:06:19 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -35,7 +35,7 @@
 # ==============================================================================
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Hibernate SDK
+featureName=EMF Teneo Hibernate SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
