--- a/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.5 2009/05/07 10:39:46 mtaal Exp $
+#  * $Id: feature.properties,v 1.6 2009/05/13 09:06:19 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Hibernate Source
+featureName=EMF Teneo Hibernate Source
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
