--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.8 2009/05/06 16:01:33 mtaal Exp $
+# * $Id: plugin.properties,v 1.9 2009/05/13 10:22:58 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Mapper
+Plugin.name = EMF Teneo Hibernate Mapper
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
