Updated plugin names to start with EMF

--- a/tests/org.eclipse.emf.teneo.commontest/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2009/05/06 16:01:34 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2009/05/13 10:23:05 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Test Framework/CommonTest
+Plugin.name = EMF Teneo Test Framework/CommonTest
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
