--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.8 2009/05/07 21:45:15 mtaal Exp $
+# * $Id: plugin.properties,v 1.9 2009/05/13 10:23:06 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Eclipse UI
+Plugin.name = EMF Teneo Hibernate Eclipse UI
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
