--- a/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.11 2009/05/06 16:01:26 mtaal Exp $
+# * $Id: plugin.properties,v 1.12 2009/05/13 10:23:07 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Hibernate Test
+Plugin.name = EMF Teneo Hibernate Test
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
