--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.8 2009/05/06 16:01:31 mtaal Exp $
+# * $Id: plugin.properties,v 1.9 2009/05/13 10:23:09 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo
+Plugin.name = EMF Teneo Samples
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
