--- a/plugins/org.eclipse.emf.teneo/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2009/05/06 16:01:35 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2009/05/13 10:23:12 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo
+Plugin.name = EMF Teneo
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
