--- a/plugins/org.eclipse.emf.teneo.orm/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.3 2009/05/13 08:24:08 mtaal Exp $
+# * $Id: plugin.properties,v 1.4 2009/05/13 10:24:03 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo ORM Generation
+Plugin.name = EMF Teneo ORM Generation
 Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
