--- a/plugins/org.eclipse.emf.teneo-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/feature.properties
@@ -11,7 +11,7 @@
 #  *   Martin Taal
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.8 2009/05/13 09:04:55 mtaal Exp $
+#  * $Id: feature.properties,v 1.9 2009/05/13 10:24:07 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -29,7 +29,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=EMF Teneo Hibernate Runtime
+featureName=EMF Teneo Hibernate
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
