--- a/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.3 2009/05/07 10:39:35 mtaal Exp $
+#  * $Id: feature.properties,v 1.4 2009/05/13 10:24:07 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo EMF Persistence Source
+featureName=EMF Teneo Persistence Source
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
