--- a/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.orm.eclipse/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.5 2009/05/08 09:05:11 mtaal Exp $
+# * $Id: plugin.properties,v 1.6 2009/05/13 10:24:08 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-pluginName = Teneo ORM Eclipse UI
+pluginName = EMF Teneo ORM Eclipse UI
 pluginProvider = Eclipse Modeling Project
 
 # ==============================================================================
