--- a/doc/org.eclipse.emf.teneo.doc/plugin.properties
+++ b/doc/org.eclipse.emf.teneo.doc/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.6 2008/05/27 07:42:39 mtaal Exp $
+# * $Id: plugin.properties,v 1.7 2009/05/13 13:36:43 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -24,7 +24,7 @@
 # append it to the end of the file, and change the code to use the new name.
 # ==============================================================================
 
-Plugin.name = Teneo Documentation
+Plugin.name = EMF Teneo Documentation
 Plugin.providerName = Eclipse.org
 
 # ==============================================================================
