--- a/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
+++ b/doc/org.eclipse.emf.teneo.doc-feature/feature.properties
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=EMF TEneo Hibernate Documentation
+featureName=EMF Teneo Hibernate Documentation
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Modeling Project
