--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.19 2009/04/03 06:16:36 mtaal Exp $
+# $Id: build.properties,v 1.20 2009/05/13 17:18:33 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -21,3 +21,4 @@ javacSource=1.5
 javacTarget=1.5
 src.includes = hbm/,\
                src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml
+jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar
