--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ejb3-persistence.jar"/>
 	<classpathentry exported="true" kind="lib" path="mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="hsqldb.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
