--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -52,7 +52,8 @@ bin.includes = META-INF/,\
                versioncheck.jar,\
                xerces-2.6.2.jar,\
                xml-apis.jar,\
-               hibernate3.jar
+               hibernate3.jar,\
+               ejb3-persistence.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
