Updated reference link to javax.persistence jar

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -31,7 +31,6 @@ jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/connector.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ehcache-1.2.3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ejb3-persistence.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-commons-annotations.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
@@ -46,6 +45,7 @@ jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/junit-3.8.1.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/log4j-1.2.11.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/mysql-connector-java-5.1.6-bin.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/xml-apis.jar
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/xml-apis.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javax.persistence_1.99.0.jar
 source.. = src/
 output.. = bin/
