--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -53,7 +53,7 @@ bin.includes = META-INF/,\
                xerces-2.6.2.jar,\
                xml-apis.jar,\
                hibernate3.jar,\
-               ejb3-persistence.jar
+               javax.persistence_1.99.0.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
