--- a/examples/org.eclipse.emf.teneo.samples/plugin.properties
+++ b/examples/org.eclipse.emf.teneo.samples/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.9 2009/05/13 10:23:09 mtaal Exp $
+# * $Id: plugin.properties,v 1.10 2009/05/23 10:49:52 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -31,3 +31,5 @@ Plugin.providerName = Eclipse Modeling Project
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = Bz277546 Model
+providerName = www.example.org
