--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -55,3 +55,8 @@ log4j.logger.org.hibernate.jdbc=error
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
 log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=error
+
+
+### log Teneo
+log4j.logger.org.eclipse.emf.teneo=error
+
