--- a/doc/org.eclipse.emf.teneo.doc/plugin.properties
+++ b/doc/org.eclipse.emf.teneo.doc/plugin.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.7 2009/05/13 13:36:43 mtaal Exp $
+# * $Id: plugin.properties,v 1.8 2009/05/29 12:12:05 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -25,7 +25,7 @@
 # ==============================================================================
 
 Plugin.name = EMF Teneo Documentation
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Modeling Project
 
 # ==============================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
