--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -7,52 +7,20 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="antlr-2.7.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm.jar"/>
-	<classpathentry exported="true" kind="lib" path="cglib-2.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="commons-collections-2.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="commons-logging-1.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="dom4j-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="hibernate-entitymanager.jar"/>
-	<classpathentry exported="true" kind="lib" path="jta.jar"/>
-	<classpathentry exported="true" kind="lib" path="log4j-1.2.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="c3p0-0.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ehcache-1.2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="hsqldb.jar"/>
 	<classpathentry exported="true" kind="lib" path="mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="hibernate-commons-annotations.jar"/>
 	<classpathentry exported="true" kind="lib" path="hibernate-annotations.jar"/>
-	<classpathentry exported="true" kind="lib" path="ant-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="ant-antlr-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="ant-junit-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="ant-launcher-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="ant-swing-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="asm-attrs.jar"/>
-	<classpathentry exported="true" kind="lib" path="checkstyle-all.jar"/>
-	<classpathentry exported="true" kind="lib" path="cleanimports.jar"/>
-	<classpathentry exported="true" kind="lib" path="concurrent-1.3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="connector.jar"/>
-	<classpathentry exported="true" kind="lib" path="jaas.jar"/>
-	<classpathentry exported="true" kind="lib" path="jacc-1_0-fr.jar"/>
-	<classpathentry exported="true" kind="lib" path="javassist.jar"/>
-	<classpathentry exported="true" kind="lib" path="jaxen-1.1-beta-7.jar"/>
-	<classpathentry exported="true" kind="lib" path="jboss-archive-browsing.jar"/>
-	<classpathentry exported="true" kind="lib" path="jboss-cache.jar"/>
-	<classpathentry exported="true" kind="lib" path="jboss-common.jar"/>
-	<classpathentry exported="true" kind="lib" path="jboss-jmx.jar"/>
-	<classpathentry exported="true" kind="lib" path="jboss-system.jar"/>
-	<classpathentry exported="true" kind="lib" path="jdbc2_0-stdext.jar"/>
-	<classpathentry exported="true" kind="lib" path="jgroups-2.2.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="jms.jar"/>
-	<classpathentry exported="true" kind="lib" path="junit-3.8.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lucene-core-2.2.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="oscache-2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="proxool-0.8.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="swarmcache-1.0rc2.jar"/>
-	<classpathentry exported="true" kind="lib" path="syndiag2.jar"/>
-	<classpathentry exported="true" kind="lib" path="versioncheck.jar"/>
-	<classpathentry exported="true" kind="lib" path="xerces-2.6.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="xml-apis.jar"/>
 	<classpathentry exported="true" kind="lib" path="hibernate3.jar"/>
 	<classpathentry exported="true" kind="lib" path="javax.persistence_1.99.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-collections-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="javassist-3.4.GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="jta-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-api-1.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate-entitymanager.jar"/>
+	<classpathentry kind="lib" path="hibernate_sources_3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
