Updated to hibernate 3.3

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -19,33 +19,10 @@ jars.compile.order = org.eclipse.emf.teneo.hibernate.jar,\
                      .
 jars.extra.classpath = org.eclipse.emf.teneo.hibernate.extra.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ant-1.6.5.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ant-antlr-1.6.5.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/antlr-2.7.6.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/asm-attrs.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/asm.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/cglib-2.1.3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/commons-collections-2.1.1.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/commons-logging-1.0.4.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/concurrent-1.3.2.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/connector.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/dom4j-1.6.1.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/ehcache-1.2.3.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-commons-annotations.jar,\
                        platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-entitymanager.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hsqldb.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jaas.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jacc-1_0-fr.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javassist.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jaxen-1.1-beta-7.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jdbc2_0-stdext.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jgroups-2.2.8.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/jta.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/junit-3.8.1.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/log4j-1.2.11.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/mysql-connector-java-5.1.6-bin.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/xml-apis.jar,\
-                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javax.persistence_1.99.0.jar
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/javax.persistence_1.99.0.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-annotations.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.hibernate.libraries/hibernate-commons-annotations.jar
 source.. = src/
 output.. = bin/
