Updated build.properties to include annotations.xml and teneo.properties

--- a/examples/gmf/org.eclipse.gmf.examples.mindmap.diagram/build.properties
+++ b/examples/gmf/org.eclipse.gmf.examples.mindmap.diagram/build.properties
@@ -4,7 +4,9 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                messages.properties,\
-               .options
+               .options,\
+               src/org/eclipse/gmf/examples/mindmap/diagram/db/teneo.properties,\
+               src/org/eclipse/gmf/examples/mindmap/diagram/db/annotations.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
