Moved annotations.xml and teneo.properties

--- a/examples/gmf/org.eclipse.gmf.examples.mindmap.diagram/build.properties
+++ b/examples/gmf/org.eclipse.gmf.examples.mindmap.diagram/build.properties
@@ -5,8 +5,9 @@ bin.includes = .,\
                plugin.properties,\
                messages.properties,\
                .options,\
-               src/org/eclipse/gmf/examples/mindmap/diagram/db/teneo.properties,\
-               src/org/eclipse/gmf/examples/mindmap/diagram/db/annotations.xml
+               src/teneo.properties,\
+               src/annotations.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+bin.excludes = src/org/
