--- a/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.ui/build.properties
@@ -10,3 +10,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties
+src.includes = about.html
