--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2009/05/08 03:40:52 mtaal Exp $
+# $Id: build.properties,v 1.3 2009/06/08 07:42:58 mtaal Exp $
 
 bin.includes = .,\
                epl-v10.html,\
@@ -18,3 +18,4 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+src.includes = about.html
