Added about.html to src.includes

--- a/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.elistfactory.tests/build.properties
@@ -9,4 +9,5 @@ bin.includes = META-INF/,\
                plugin.properties
 source.. = src/
 output.. = bin/
+src.includes = about.html
                
