--- a/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.eclipselink.examples.library.orm.tests/build.properties
@@ -10,3 +10,4 @@ bin.includes = META-INF/,\
                about.html,\
                plugin.properties,\
                test.xml
+src.includes = about.html
