Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -12,7 +12,12 @@ bin.includes = plugin.xml,\
                .
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               about.ini,\
+               about.properties,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
 jars.compile.order = org.eclipse.emf.teneo.hibernate.jar,\
