Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/build.properties
@@ -12,7 +12,12 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/eclipse/messages.properties
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               about.properties,\
+               about.ini,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 jars.compile.order = .
 javacSource=1.5
 javacTarget=1.5
