Updated build.properties with license and other files for src.includes

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -30,7 +30,13 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
-               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml
+               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml,\
+               about.properties,\
+               about.ini,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties,\
+               readme.txt
 jars.extra.classpath = lib/tools.jar,\
                        lib/jtds-1.2.jar,\
                        lib/mysql-connector-java-3.1.12-bin.jar,\
