Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -15,6 +15,10 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
                model/,\
-               license.html
+               license.html,\
+               about.ini,\
+               about.properties,\
+               plugin.properties,\
+               modeling32.png
 javacSource=1.5
 javacTarget=1.5
