Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink/build.properties
@@ -10,5 +10,12 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               epl-v10.html,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
                
