Updated build.properties with license and other files for src.includes

--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
@@ -12,6 +12,11 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
-               model/
+               model/,\
+               about.ini,\
+               about.properties,\
+               license.html,\
+               modeling32.png,\
+               plugin.properties
 javacSource=1.5
 javacTarget=1.5
