Updated build.properties with license and other files for src.includes

--- a/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
+++ b/examples/org.eclipse.emf.teneo.eclipselink.examples.library/build.properties
@@ -2,7 +2,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.3 2009/06/08 07:42:58 mtaal Exp $
+# $Id: build.properties,v 1.4 2009/06/08 15:47:57 mtaal Exp $
 
 bin.includes = .,\
                epl-v10.html,\
@@ -18,4 +18,11 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
-src.includes = about.html
+src.includes = about.html,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               license.html,\
+               epl-v10.html,\
+               modeling32.png,\
+               plugin.properties
